[gd_scene load_steps=10 format=3 uid="uid://rxkyxiyxkq0x"]

[ext_resource type="Script" uid="uid://cw8vx34ocoss8" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://d1cinbvama2kx" path="res://Scenes/ui.tscn" id="2_cvnsp"]
[ext_resource type="Texture2D" uid="uid://qltjl5aci02d" path="res://Assets/hand-sprite-1-Sheet.png" id="3_6t5aa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvnsp"]
radius = 34.0
height = 102.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnsp"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6t5aa"]
radius = 60.0

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "HandGrab"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand/Hand-sprite-1-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fkybt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand/Hand-sprite-1-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3wgy"]
_data = {
&"HandGrab": SubResource("Animation_vgqql"),
&"RESET": SubResource("Animation_fkybt")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 2
script = ExtResource("1_v0iea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="CameraMarker" type="Marker2D" parent="."]
position = Vector2(0, 12)

[node name="Camera2D" type="Camera2D" parent="CameraMarker"]
drag_top_margin = 0.8
drag_bottom_margin = 0.9

[node name="UI" parent="." instance=ExtResource("2_cvnsp")]
z_index = 10
offset_left = -576.0
offset_top = -312.0
offset_right = -576.0
offset_bottom = -312.0

[node name="Hand" type="Node2D" parent="."]
z_index = -1
metadata/_edit_group_ = true

[node name="PickerArea" type="Area2D" parent="Hand"]
position = Vector2(0, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand/PickerArea"]
shape = SubResource("CircleShape2D_cvnsp")

[node name="Hand-sprite-1-sheet" type="Sprite2D" parent="Hand"]
z_index = 1
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("3_6t5aa")
hframes = 2

[node name="MouseSlowdownArea" type="Area2D" parent="Hand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand/MouseSlowdownArea"]
shape = SubResource("CircleShape2D_6t5aa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x3wgy")
}

[connection signal="mouse_entered" from="Hand/MouseSlowdownArea" to="." method="_on_mouse_slowdown_area_mouse_entered"]
[connection signal="mouse_exited" from="Hand/MouseSlowdownArea" to="." method="_on_mouse_slowdown_area_mouse_exited"]
